--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src = "app.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <main id="main-content"></main>
     <section></section>
     <h3></h3>
     <p></p>
+    <script src = "app.js"></script>
 </body>
 </html>
