--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <title>Document</title>
 </head>
 <body>
-    <main id="main-content"></main>
-    <table>
-        <thead id= 'tbody'></thead>
-        <tbody id= 'tbody'></tbody>
-        <footer id= 'tfoot'></footer>
-    </table>
-    <section></section>
-    <h3></h3>
-    <p></p>
-    <script src = "app.js"></script>
+
+  <header></header>
+  <main id="main-content">
+    <form id="sales-form">
+      <label>Store Name
+        <input name="storename" type="text" placeholder="Location">
+      </label>
+
+      <label>Minimum Customers Per Hour
+        <input name="min" type="number" placeholder="0">
+      </label>
+
+      <label>Maximum Customers Per Hour
+        <input name="max" type="number" placeholder="0">
+      </label>
+
+      <label for="avg">Average Cookies Per Customer</label>
+      <input id="avg" name="avg" type="number" step='0.01' placeholder="0">
+
+      <button type="submit">Submit</button>
+    </form>
+  </main>
+  <footer></footer>
+
+  <script src="app.js"></script>
 </body>
 </html>
